force-app/main/default/objects/genesis__Applications__c.object
<CustomObject>
    <fields>
        <fullName>Accounts_TIN__c</fullName>
        <formula>genesis__Account__r.TIN__c</formula>
        <label>Account&apos;s TIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Code__c</fullName>
        <label>Decision Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fico_Score__c</fullName>
        <label>Fico_Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Journey_Stage__c</fullName>
        <label>Journey Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>stage 1</fullName>
                </value>
                <value>
                    <fullName>stage 2</fullName>
                </value>
                <value>
                    <fullName>stage 3</fullName>
                </value>
                <value>
                    <fullName>stage 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KYB_Performed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KYB Performed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KYB_Status__c</fullName>
        <label>KYB Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KYC_Performed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KYC Performed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KYC_Status__c</fullName>
        <label>KYC Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Eligible_Amount__c</fullName>
        <label>Max Eligible Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POO_Status__c</fullName>
        <label>POO Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pre_Approved_Amount__c</fullName>
        <label>Pre-Approved Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Requested_Loan_Amount__c</fullName>
        <label>Requested Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <label>Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>genesis__Payment_Frequency__c</fullName>
        <label>Payment Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>genesis__Product_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>DAILY</fullName>
                </value>
                <value>
                    <fullName>WEEKLY</fullName>
                </value>
                <value>
                    <fullName>BI-WEEKLY</fullName>
                </value>
                <value>
                    <fullName>MONTHLY</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>QUARTERLY</fullName>
                </value>
                <value>
                    <fullName>ANNUAL</fullName>
                </value>
                <value>
                    <fullName>SEMI-MONTHLY</fullName>
                </value>
                <value>
                    <fullName>BI-MONTHLY</fullName>
                </value>
                <value>
                    <fullName>SEMI-ANNUAL</fullName>
                </value>
                <value>
                    <fullName>SINGLEPMT</fullName>
                </value>
                <value>
                    <fullName>SEMI-MONTHLY-PD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>genesis__Prepaid_Interest_Option__c</fullName>
        <label>Prepaid Interest Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Financed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>genesis__Pricing_Method__c</fullName>
        <label>Pricing Method</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>genesis__Product_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>RATE CARD</fullName>
                </value>
                <value>
                    <fullName>MANUAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>genesis__Product_Sub_Type__c</fullName>
        <label>Product Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>genesis__Product_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>OPERATING LEASE</fullName>
                </value>
                <value>
                    <fullName>FINANCE LEASE</fullName>
                </value>
                <value>
                    <fullName>LOAN</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>UNDEFINED</fullName>
                </value>
                <value>
                    <fullName>CLOSE ENDED</fullName>
                </value>
                <value>
                    <fullName>OPEN ENDED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>genesis__Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LEASE</fullName>
                </value>
                <value>
                    <fullName>LOAN</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>LINE OF CREDIT</fullName>
                </value>
                <value>
                    <fullName>PACKAGE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>genesis__Regulation_O__c</fullName>
        <label>Regulation O</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Executive Officer</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Principal Shareholder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>genesis__Repayment_Procedure__c</fullName>
        <label>Repayment Procedure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Equal Monthly Installments</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Equated Principal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>genesis__Sales_Division__c</fullName>
        <description>Sales Division.</description>
        <inlineHelpText>Sales Division.</inlineHelpText>
        <label>Sales Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DEALER</fullName>
                </value>
                <value>
                    <fullName>DIRECT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>genesis__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APPROVED - APPROVED</fullName>
                </value>
                <value>
                    <fullName>APPROVED - CONVERTED TO CONTRACT</fullName>
                </value>
                <value>
                    <fullName>APPROVED - DOCUMENT CHECK</fullName>
                </value>
                <value>
                    <fullName>NEW - CREDIT PULLED</fullName>
                </value>
                <value>
                    <fullName>NEW - ENTERED</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>NEW - IN CREDIT CHECK</fullName>
                </value>
                <value>
                    <fullName>NEW - IN REVIEW</fullName>
                </value>
                <value>
                    <fullName>NEW - PRICING GENERATED</fullName>
                </value>
                <value>
                    <fullName>NEW - SCORECARD GENERATED</fullName>
                </value>
                <value>
                    <fullName>NEW - CHECKLIST GENERATED</fullName>
                </value>
                <value>
                    <fullName>NEW - VEHICLE VALUATION REQUIRED</fullName>
                </value>
                <value>
                    <fullName>REJECTED</fullName>
                </value>
                <value>
                    <fullName>PULL CREDIT</fullName>
                </value>
                <value>
                    <fullName>Lexis Nexis - InstaID - Passed</fullName>
                </value>
                <value>
                    <fullName>Lexis Nexis - InstaID - Failed</fullName>
                </value>
                <value>
                    <fullName>TruVue01 - Passed</fullName>
                </value>
                <value>
                    <fullName>TruVue01 - Failed</fullName>
                </value>
                <value>
                    <fullName>Lexis Nexis - Business InstaID - Passed</fullName>
                </value>
                <value>
                    <fullName>Lexis Nexis - Business InstaID - Failed</fullName>
                </value>
                <value>
                    <fullName>Regulatory Checks Completed</fullName>
                </value>
                <value>
                    <fullName>Pending - Agent Portal</fullName>
                </value>
                <value>
                    <fullName>Pending - Underwriter</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Approved - Offer Generated</fullName>
                </value>
                <value>
                    <fullName>Document Submission Required</fullName>
                </value>
                <value>
                    <fullName>Document Submission Completed</fullName>
                </value>
                <value>
                    <fullName>Approved - Offer Accepted</fullName>
                </value>
                <value>
                    <fullName>Pending - Document Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>portal_stage__c</fullName>
        <label>portal stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer_Applies_Loan_Details</fullName>
                </value>
                <value>
                    <fullName>Customer_Applies_Personal_Info</fullName>
                </value>
                <value>
                    <fullName>Customer_Applies_Approved</fullName>
                </value>
                <value>
                    <fullName>Customer_Applies_Denied</fullName>
                </value>
                <value>
                    <fullName>docusign_signed</fullName>
                </value>
                <value>
                    <fullName>webster_session_timedOut</fullName>
                </value>
                <value>
                    <fullName>close_deal</fullName>
                </value>
                <value>
                    <fullName>Failure_wrap</fullName>
                </value>
                <value>
                    <fullName>Pending_Underwriter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>